--- a/LC/lcapp/templates/enroll.html
+++ b/LC/lcapp/templates/enroll.html
@@ -2,12 +2,40 @@
 <html>
 <head>
 	<title></title>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
+<style type="text/css">
+.mid{
+
+margin-top: 10%;
+margin-left: 30%;
+}
+</style>
 <body>
-	<form method="POST" action="/genlc/">
-		{% csrf_token %}
+	<ul class="alert"></ul>
+<div class="mid">
+<a href="/adddata/" class="btn btn-success">ADD DATA</a><br>
+<form method="POST" action="/genlc/">
+{% csrf_token %}
 Enrollment <input type="text" name="enrollment">
 <input class="btn btn-default" type="submit" name="submit">
 </form>
+</div>
+
+<script type="text/javascript">
+	$('.alert').empty()
+	if ("{{state}}" == 1){
+		$('.alert').append("<li class='alert alert-danger'>Invalid enrollment number</li>")
+	}
+</script>
+
 </body>
 </html>
+
