--- a/LC/lcapp/templates/index.html
+++ b/LC/lcapp/templates/index.html
@@ -12,7 +12,7 @@
 
 <div class="container">
   <center><h2>Leaving Certificate</h2></center>
-  <form action="/lc/" method="POST">
+  <form>
   	{% csrf_token %}
 
 	<div class="form-group">
@@ -49,7 +49,7 @@
 		<div class="col-md-6">
 			<div class="form-group">
       		<label for="enrollment">Enrollment</label>
-      		<input type="number" class="form-control" id="enrollment" placeholder="Enter enrollment" name="enrollment">
+      		<input type="number" class="form-control" id="enrollment" placeholder="Enter enrollment" name="enrollment" required>
     		</div>
 		</div>
 	</div>
@@ -121,6 +121,36 @@
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
 </div>
+
+
+<script type="text/javascript">
+	$('form').on('submit', function(e){
+	e.preventDefault()
+	$.ajax({
+		url : "/lc/",
+		method : "POST",
+		type : "JSON",
+		headers: { "X-CSRFToken": '{{csrf_token}}' },
+	    data : new FormData(this),
+	    contentType: false,
+	    cache : false,
+	    processData:false,
+	    success : function(e){
+	    	if (e.state == 0){
+	    		window.location.href = "/show_lc/"
+	    	}
+	    	if (e.state == 1){
+	    		alert("Enrollment alredy exist")
+	    	}
+	    },
+	    error : function(e){
+	    	alert("error")
+	    }
+
+	})
+	})
+</script>
+
 
 </body>
 </html>
