--- a/LC/lcapp/templates/enroll.html
+++ b/LC/lcapp/templates/enroll.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+  {% load static %}
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
@@ -10,30 +11,105 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-</head>
-<style type="text/css">
-.mid{
 
-margin-top: 10%;
-margin-left: 30%;
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+body {
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+        /*background: url({% static '/img/bg.jpg' %});*/
+        background-size: cover;
+    }
+
+div.content {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
+}
+
+.box {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 450px;
+            padding: 60px;
+            background: #eff3f51a;
+            box-sizing: border-box;
+            box-shadow: 0 15px 25px rgba(0,0,0,.5);
+            border-radius: 10px;
+        }
+
+ .box .inputBox {
+            position: relative;
+        }
+ .box .inputBox input {
+            width: 100%;
+            padding: 10px 0;
+            font-size: 16px;
+            color: #fff;
+            margin-bottom: 30px;
+            border: none;
+            border-bottom: 1px solid #6d0e33c9;
+            outline: none;
+            background: transparent;
+        }
+
+.box .in input {
+			font-size: 20px;
+			color:black;
+		}
+
+.box input[type="submit"]{
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #1232b780;
+    padding: 10px 30px;
+    cursor: pointer;
+    font-size: 20px;
+    border-radius: 5px;
+        }
+.box input[type="submit"].btn:hover{background:blue;}
+
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
+.box {
+       width:100%;
+     }
+
 }
 </style>
+</head>
 <body>
-	<ul class="alert"></ul>
-<div class="mid">
+  {% include "home.html" %}
+<div class="box">
+	<div class="inputBox in">
+<form method="POST" action="{{link}}">
+  {% csrf_token %}
 <a href="/adddata/" class="btn btn-success">ADD DATA</a><br>
-<form method="POST" action="/genlc/">
-{% csrf_token %}
-Enrollment <input type="text" name="enrollment">
-<input class="btn btn-default" type="submit" name="submit">
-</form>
+<ul class="alert"></ul>
+<lable><h3>Enrollment</h3></lable>
+<input type="text" name="enrollment" id="enroll">
 </div>
-
+<input class="btn btn-success" type="submit" value="{{btn_name}}">
+</div>
+</form>
 <script type="text/javascript">
+
 	$('.alert').empty()
 	if ("{{state}}" == 1){
 		$('.alert').append("<li class='alert alert-danger'>Invalid enrollment number</li>")
 	}
+
+if ("{{state}}" == 5)
+    $('.alert').append("<li class='alert'>Deleted successfully</li>")
+
 </script>
 
 </body>
