--- a/LC/lcapp/templates/enroll.html
+++ b/LC/lcapp/templates/enroll.html
@@ -87,7 +87,7 @@ div.content {
 </style>
 </head>
 <body>
-  {% include "home.html" %}
+  {% include "layouts/sidebar.html" %}
 <div class="box">
 	<div class="inputBox in">
 <form method="POST" action="{{link}}">
@@ -111,7 +111,7 @@ if ("{{state}}" == 5)
     $('.alert').append("<li class='alert'>Deleted successfully</li>")
 
 </script>
-
+{% include 'layouts/footer.html' %}
 </body>
 </html>
 
