--- a/LC/lcapp/templates/home.html
+++ b/LC/lcapp/templates/home.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 	<title></title>
+	{% load static %}
 <!-- Latest compiled and minified CSS -->
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
 <!-- jQuery library -->
@@ -20,128 +23,138 @@ body {
   font-size: 16px;
 }
 
-/* Toggle Styles */
+.box{
 
-#viewport {
-  padding-left: 250px;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+width: 100%;
+height: 700px;
+background-color: white;
+box-shadow: 5px 5px 5px 5px #aaaaaa;
+
 }
 
-#content {
-  width: 100%;
-  position: relative;
-  margin-right: 0;
+
+img{
+	border-radius: 10px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.wrapper {
+	margin: 10%; 
+	margin-left: 20%;
+	margin-top: 5%;
 }
 
-/* Sidebar Styles */
-
-#sidebar {
-  z-index: 1000;
-  position: fixed;
-  left: 250px;
-  width: 250px;
-  height: 100%;
-  margin-left: -250px;
-  overflow-y: auto;
-  background: #37474F;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+.text-logo-div {
+    text-align: center;
+    /*width: 540px;
+    height: 125px;*/
+    margin-top: -10%;
 }
 
-#sidebar header {
-  background-color: #263238;
-  font-size: 20px;
-  line-height: 52px;
-  text-align: center;
+body{
+    font-family:Roboto;
 }
 
-#sidebar header a {
-  color: #fff;
-  display: block;
-  text-decoration: none;
+footer{
+     background-color: #33383c;
+     padding:70px 0px;
+}	       
+
+footer ul li{
+    padding:5px 0px;
 }
 
-#sidebar header a:hover {
-  color: #fff;
+.adress span , .contact span , .social span{
+   color: #FFF; 
+   font-weight: 800; 
+   padding-bottom: 10px; 
+   margin-bottom: 20px;
+   display: block;
+   text-transform: uppercase;
+   font-size: 20px;
+   letter-spacing: 3px;
+}
+ 
+.adress li p , .contact li a , .social li a{
+    color:#FFF;
+    letter-spacing: 2px;
+    text-decoration:none;
+    font-size:15px;
 }
 
-#sidebar .nav{
-  
+.social li{
+    float:left;
 }
 
-#sidebar .nav a{
-  background: none;
-  border-bottom: 1px solid #455A64;
-  color: #CFD8DC;
-  font-size: 14px;
-  padding: 16px 24px;
+.adress , .contact , .social {
+    list-style: none;
 }
 
-#sidebar .nav a:hover{
-  background: none;
-  color: #ECEFF1;
+.fa{
+    color:#9c9c9c;
+    margin-right: 15px;
+    font-size:14px;
 }
 
-#sidebar .nav a i{
-  margin-right: 16px;
-}
 </style>
 </head>
 <body>
-<div id="viewport">
-  <!-- Sidebar -->
-  <div id="sidebar">
-    <header>
-      <a href="#">My App</a>
-    </header>
-    <ul class="nav">
-      <li>
-        <a href="#">
-          <i class="zmdi zmdi-view-dashboard"></i> Home
-        </a>
-      </li>
-      <li>
-        <a href="/enroll/">
-          <i class="zmdi zmdi-info-outline"></i> Show LC
-        </a>
-      </li>
-      <li>
-        <a href="/adddata/">
-          <i class="zmdi zmdi-link"></i> Add LC
-        </a>
-      </li>
-      <li>
-        <a href="/view_update/">
-          <i class="zmdi zmdi-widgets"></i> Update LC
-        </a>
-      </li>
-      <li>
-        <a href="/view_delete/">
-          <i class="zmdi zmdi-calendar"></i> Delete LC
-        </a>
-      </li>
-    </ul>
-  </div>
-  <!-- Content -->
-  <div id="content">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a href="#"><i class="zmdi zmdi-notifications text-danger"></i>
-            </a>
-          </li>
-          <li><a href="#">Test User</a></li>
-        </ul>
+{% include "layouts/sidebar.html" %}
+<div class="wrapper">
+	<div class="box">
+		<div class="logo">
+			<img src="{%static '/img/gplogo1.jpg'%}" style="width:15%; margin-left: 2%; margin-top: 2%" >
+			<div class="text-logo-div">
+			 <h2 style="margin-top:-12px; color:red;">Government Polytechnic, Thane. </h2>
+        	<h3 style="font-size:26px; color:blue;">शासकीय तंत्रनिकेतन, ठाणे.</h3>
+        	<h3 style="margin-top:-15px; color:blue;">Established 1985 (Government of Maharashtra.)</h3>
       </div>
-    </nav>
+			<img src="{%static '/img/gptlogo.jpg'%}" style="width:15%;  margin-top: -14%; margin-left: 83% " >
+		</div>
+		<hr style="  border: 1px solid black;">
+	
+<div class="container" style="height: auto; width: 80%;">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="{% static '/img/computer.jpg' %}" class="img-fluid" alt="Los Angeles" style="width:100%;">
+      </div>
+
+      <div class="item">
+        <img src="{% static '/img/electronic.jpg' %}" class="img-fluid" alt="Chicago" style="width:100%;">
+      </div>
     
+      <div class="item">
+        <img src="{% static '/img/mechanical.jpg' %}" class="img-fluid" alt="New york" style="width:100%;">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 </div>
+
+</div>
+ 
+  	</div>
+<!--
+    instagram: www.instagram.com/programmingtutorial
+    site: programlamadersleri.net
+-->
+{% include 'layouts/footer.html' %}
 </body>
 </html>
