--- a/LC/lcapp/templates/layouts/sidebar.html
+++ b/LC/lcapp/templates/layouts/sidebar.html
@@ -127,6 +127,11 @@ body {
           <i class="zmdi zmdi-calendar"></i> Delete LC
         </a>
       </li>
+      <li>
+        <a href="/logout/">
+          <i class="zmdi zmdi-calendar"></i> Logout
+        </a>
+      </li>
     </ul>
   </div>
   <!-- Content -->
