--- a/LC/lcapp/templates/update.html
+++ b/LC/lcapp/templates/update.html
@@ -13,7 +13,7 @@
 
 <div class="container" style="margin: 20%; margin-top: 2%;">
   <center><h2>Leaving Certificate</h2></center>
-  <form method="POST" action="/lc/">
+  <form method="POST" action="/update/">
   	{% csrf_token %}
 
 	<div class="form-group">
