--- a/LC/lcapp/templates/enroll.html
+++ b/LC/lcapp/templates/enroll.html
@@ -29,10 +29,7 @@ div.content {
 }
 
 .box {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            margin-left: 40%;
             width: 450px;
             padding: 60px;
             background: #eff3f51a;
@@ -89,17 +86,17 @@ div.content {
 <body>
   {% include "layouts/sidebar.html" %}
 <div class="box">
-	<div class="inputBox in">
-<form method="POST" action="{{link}}">
-  {% csrf_token %}
-<a href="/adddata/" class="btn btn-success">ADD DATA</a><br>
-<ul class="alert"></ul>
-<lable><h3>Enrollment</h3></lable>
-<input type="text" name="enrollment" id="enroll">
+    <div class="inputBox in">
+        <form method="POST" action="{{link}}">
+          {% csrf_token %}
+            <ul class="alert"></ul>
+            <lable><h3>Enrollment</h3></lable>
+            <input type="text" name="enrollment" id="enroll">
+            <input class="btn btn-success" type="submit" value="{{btn_name}}">
+        </form>
+    </div>
 </div>
-<input class="btn btn-success" type="submit" value="{{btn_name}}">
-</div>
-</form>
+<br>
 <script type="text/javascript">
 
 	$('.alert').empty()
